--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -14,3 +14,6 @@ RSpec/EmptyLineAfterHook:
 Naming/FileName:
   Exclude:
     - lib/umbrellio-utils.rb
+
+Naming/RescuedExceptionsVariableName:
+  Enabled: false
