--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,38 +3,11 @@ name: Test
 on: [push, pull_request]
 
 env:
-  FULL_COVERAGE_CHECK: false # Sometimes, sometimes...
+  FULL_COVERAGE_CHECK: false # Someday, someday...
 
 jobs:
-  full-check:
+  test:
     runs-on: ubuntu-latest
-
-    # We want to run on external PRs, but not on our own internal PRs as they'll be run on push event
-    if: github.event_name == 'push' || github.event.pull_request.head.repo.full_name != 'umbrellio/utils'
-
-    steps:
-      - uses: actions/checkout@v2
-      - uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: "3.1"
-          bundler-cache: true
-      - name: Run Linter
-        run: bundle exec ci-helper RubocopLint
-      - name: Check missed spec suffixes
-        run: bundle exec ci-helper CheckSpecSuffixes --extra-paths spec/*.rb --ignored-paths spec/*_helper.rb
-      - name: Run specs
-        run: bundle exec ci-helper RunSpecs
-      - name: Audit
-        run: bundle exec ci-helper BundlerAudit
-      - name: Coveralls
-        uses: coverallsapp/github-action@master
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-  specs:
-    runs-on: ubuntu-latest
-
-    env:
-      FULL_TEST_COVERAGE_CHECK: false
 
     # We want to run on external PRs, but not on our own internal PRs as they'll be run on push event
     if: github.event_name == 'push' || github.event.pull_request.head.repo.full_name != 'umbrellio/utils'
@@ -42,13 +15,48 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ruby: ["2.7", "3.0"]
+        ruby: ["2.7", "3.0", "3.1"]
+
+    services:
+      postgres:
+        image: postgres
+        env:
+          POSTGRES_USER: root
+          POSTGRES_HOST_AUTH_METHOD: trust
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 5432:5432
+    env:
+      PGHOST: localhost
+      PGUSER: root
 
     steps:
       - uses: actions/checkout@v2
+
       - uses: ruby/setup-ruby@v1
         with:
-          ruby-version: ${{ matrix.ruby }}
+          ruby-version: "3.1"
           bundler-cache: true
+
+      - run: psql -c 'CREATE DATABASE umbrellio_utils_test'
+
+      - name: Run Linter
+        run: bundle exec ci-helper RubocopLint
+
+      - name: Check missed spec suffixes
+        run: bundle exec ci-helper CheckSpecSuffixes --extra-paths spec/*.rb --ignored-paths spec/*_helper.rb
+
       - name: Run specs
-        run: bundle exec rspec
+        run: bundle exec ci-helper RunSpecs
+
+      - name: Audit
+        run: bundle exec ci-helper BundlerAudit
+
+      - name: Coveralls
+        uses: coverallsapp/github-action@master
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
