--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,13 +35,14 @@ jobs:
         image: clickhouse/clickhouse-server:25.3.6.56-alpine
         env:
           CLICKHOUSE_DB: umbrellio_utils_test
+          CLICKHOUSE_SKIP_USER_SETUP: 1
         ports:
           - 8123:8123
           - 9000:9000
         volumes:
           - ./.github/clickhouse/config.d:/etc/clickhouse-server/config.d
         options: >-
-          --health-cmd "curl -f http://localhost:8123/ping || exit 1"
+          --health-cmd 'clickhouse-client --query "SELECT * FROM system.build_options"'
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
