--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,8 +40,9 @@ jobs:
           - 8123:8123
           - 9000:9000
         volumes:
-          - ./clickhouse/config.d:/etc/clickhouse-server/config.d:ro
+          - ./.github/clickhouse/config.d:/etc/clickhouse-server/config.d
         options: >-
+          --user=clickhouse
           --health-cmd "clickhouse-client --query \"SELECT * FROM system.build_options\""
           --health-interval 10s
           --health-timeout 5s
