--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,6 +39,8 @@ jobs:
         ports:
           - 8123:8123
           - 9000:9000
+        volumes:
+          - ./.github/clickhouse/config.d:/etc/clickhouse-server/config.d
         options: >-
           --user=clickhouse
           --health-cmd "clickhouse-client --query \"SELECT * FROM system.build_options\""
