--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,29 +30,20 @@ jobs:
           --health-retries 5
         ports:
           - 5432:5432
-
-      clickhouse:
-        image: clickhouse/clickhouse-server:25.3.6.56-alpine
-        env:
-          CLICKHOUSE_DB: umbrellio_utils_test
-          CLICKHOUSE_SKIP_USER_SETUP: 1
-        ports:
-          - 8123:8123
-          - 9000:9000
-        volumes:
-          - ./.github/clickhouse/config.d:/etc/clickhouse-server/config.d
-        options: >-
-          --user=clickhouse
-          --health-cmd "clickhouse-client --query \"SELECT * FROM system.build_options\""
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
     env:
       PGHOST: localhost
       PGUSER: root
 
     steps:
       - uses: actions/checkout@v2
+
+      - name: Start ClickHouse with mounted config
+        run: |
+          docker run -d --name ch \
+            CLICKHOUSE_SKIP_USER_SETUP=1 CLICKHOUSE_DB=umbrellio_utils_test -p 8123:8123 -p 9000:9000
+            -v ${{ github.workspace }}/.github/clickhouse/config.d:/etc/clickhouse-server/config.d \
+            -v ${{ github.workspace }}/.github/clickhouse/users.d:/etc/clickhouse-server/users.d \
+            clickhouse/clickhouse-server:25.3.6.56-alpine
 
       - uses: ruby/setup-ruby@v1
         with:
