--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -42,6 +42,7 @@ jobs:
           docker run -d \
             --name ch \
             --network dbnet \
+            -e CLICKHOUSE_SKIP_USER_SETUP=1 -e CLICKHOUSE_DB=umbrellio_utils_test \
             -p 9000:9000 -p 8123:8123 \
             -v ${{ github.workspace }}/.github/clickhouse/clickhouse_keeper.xml:/etc/clickhouse-server/config.d/keeper.xml \
             clickhouse/clickhouse-server:25.3.6.56-alpine
