--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,7 @@ jobs:
         ruby: ["3.1", "3.2", "3.3", "3.4"]
 
     env:
-      PGHOST: localhost
+      PGHOST: pg
       PGUSER: user
     steps:
       - uses: actions/checkout@v4
