Add clickhouse support (#42)

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,33 +17,58 @@ jobs:
       matrix:
         ruby: ["3.1", "3.2", "3.3", "3.4"]
 
-    services:
-      postgres:
-        image: postgres
-        env:
-          POSTGRES_USER: root
-          POSTGRES_HOST_AUTH_METHOD: trust
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-        ports:
-          - 5432:5432
     env:
-      PGHOST: localhost
-      PGUSER: root
-
+      PGHOST: pg
+      PGUSER: user
+      PGPASSWORD: pass
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
+
+      - name: Create docker network
+        run: docker network create dbnet
+
+      - name: Start PostgreSQL
+        run: |
+          docker run -d \
+            --name pg \
+            --network dbnet \
+            -e POSTGRES_PASSWORD=pass \
+            -e POSTGRES_USER=user \
+            -e POSTGRES_DB=umbrellio_utils_test \
+            -p 5432:5432 \
+            postgres:14
+
+      - name: Start ClickHouse
+        run: |
+          docker run -d \
+            --name ch \
+            --network dbnet \
+            -e CLICKHOUSE_SKIP_USER_SETUP=1 -e CLICKHOUSE_DB=umbrellio_utils_test \
+            -p 9000:9000 -p 8123:8123 \
+            -v ${{ github.workspace }}/.github/clickhouse/clickhouse_keeper.xml:/etc/clickhouse-server/config.d/keeper.xml \
+            clickhouse/clickhouse-server:25.3.6.56-alpine
+
+      - name: Wait for Postgres
+        run: |
+          for i in {1..30}; do
+            if docker exec pg pg_isready -U user; then exit 0; fi
+            sleep 1
+          done
+          exit 1
+
+      - name: Wait for ClickHouse
+        run: |
+          for i in {1..30}; do
+            if docker exec ch clickhouse-client --query "SELECT 1"; then exit 0; fi
+            sleep 1
+          done
+          exit 1
 
       - uses: ruby/setup-ruby@v1
         with:
           ruby-version: ${{ matrix.ruby }}
           rubygems: latest
           bundler-cache: true
-
-      - run: psql -c 'CREATE DATABASE umbrellio_utils_test'
 
       - name: Run Linter
         run: bundle exec ci-helper RubocopLint
