--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -31,9 +31,9 @@ Naming/VariableNumber:
 
 Naming/PredicateMethod:
   Enabled: false
-
-require:
-  - umbrellio_utils/rubocop
-
-Custom/RegexRules:
-  Enabled: true
+#
+#require:
+#  - umbrellio_utils/rubocop
+#
+#Custom/RegexRules:
+#  Enabled: true
